--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^18.11.17",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
+    "tinymce": "^5.10.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
