--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "concurrently": "^7.6.0",
+    "eslint": "^8.31.0",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.20",
     "tinymce": "^5.10.7",
     "ts-loader": "^9.4.2",
