--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-loader": "^9.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.1.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
@@ -25,6 +26,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.15",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "concurrently": "^7.6.0",
@@ -32,6 +34,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express-session": "^1.17.3",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "tinymce": "^5.10.7",
@@ -47,7 +50,9 @@
     "app/config/*",
     "app/controllers/*",
     "app/http/*",
+    "app/services/*",
     "app/shared/*",
+    "app/models/*",
     "src/js/*"
   ]
 }
