--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "eslint . --ext .tsx,.ts",
     "lint:fix": "eslint . --ext .tsx,.ts,.js --fix",
     "build": "webpack --config ./webpack/prod.config.js",
-    "start": "nodemon -L"
+    "start": "nodemon -L",
+    "dev:vite": "vite --watch",
+    "build:vite": "vite build --watch --config ./vite.config.ts",
+    "preview": "vite preview"
   },
   "author": "Hieu-Dang",
   "license": "ISC",
@@ -25,10 +28,13 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@types/express": "^4.17.15",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -37,10 +43,14 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
+    "rollup-plugin-babel": "^4.4.0",
     "tinymce": "^5.10.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
+    "vite": "^4.1.4",
+    "vite-plugin-babel": "^1.1.3",
+    "vite-plugin-node-polyfills": "^0.7.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-merge": "^5.8.0",
