--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
+    "sequelize": "^6.29.3",
     "tinymce": "^5.10.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
