--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-loader": "^9.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.9.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
@@ -25,7 +26,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.15",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.19.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
