--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-flash-message": "^3.0.2",
     "mysql2": "^3.9.1"
   },
   "devDependencies": {
@@ -26,13 +27,14 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.15",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^18.19.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "tinymce": "^5.10.9",
@@ -47,6 +49,7 @@
   "workspaces": [
     "app/config/*",
     "app/controllers/*",
+    "app/*",
     "app/http/*",
     "app/shared/*",
     "src/js/*"
