--- a/package.json
+++ b/package.json
@@ -15,19 +15,26 @@
   "dependencies": {
     "@babel/runtime": "^7.20.7",
     "babel-loader": "^9.1.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash-message": "^3.0.2",
-    "mysql2": "^3.9.1"
+    "luxon": "^3.4.4",
+    "mysql2": "^3.9.1",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.15",
+    "@types/express-serve-static-core": "^4.17.43",
     "@types/express-session": "^1.18.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^18.19.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "concurrently": "^7.6.0",
