--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@babel/runtime": "^7.20.7",
     "babel-loader": "^9.1.0",
     "bcrypt": "^5.1.1",
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-flash-message": "^3.0.2",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.1",
+    "redis": "^4.6.13",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   },
